Clearing mongo database
I fixed my code by adding in the logout button. We added code to take in the json array of the data in alphabetical order to put in the mongo database. We also added another json object that is a function that pulls up friends. We also added a json function that deletes and clears the database.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
    </head>
    <body>
        <div id="wrapper">
-           <a href="/logout"><button type="button" class="logout"></button></a>
+           <a href="/logout"><button type="button" class="logout">Logout</button></a>
            <div id="friends=column" class="column">
                <h1>Your Friends</h1>
                <ul id="friends">
