--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,14 @@
        <meta charset="UTF-8">
        <meta name="viewport" content="initial-scale=1.0">
        <link rel="stylesheet" href="style.css">
+       <!-- gonna be located in static folder -->
+       <!-- this will be event fired so timing is not a worry -->
+       <script type="text/javascript" src="main.js"></script>
    </head>
    <body>
        <div id="wrapper">
            <a href="/logout"><button type="button" class="logout">Logout</button></a>
-           <div id="friends=column" class="column">
+           <div id="friends-column" class="column">
                <h1>Your Friends</h1>
                <ul id="friends">
                    <!-- dynamically creates a list of our friends -->
